--- a/public/assests/css/displayGig.styles.css
+++ b/public/assests/css/displayGig.styles.css
@@ -445,15 +445,16 @@ textarea {
     width: 100%;
     margin-left: 16px;
 }
-.tab {
+.topRightContainer .tab {
     width: 100%;
     overflow: hidden;
     display: flex;
+    justify-content: space-between;
     background-color: #f1f1f1;
     border-radius: 8px 8px 0 0;
 }
-.tab button {
-    width: calc(100% / 3);
+.topRightContainer .tab button {
+    width: 100%;
     background-color: #f7f7f7;
     border: 0.3px solid rgb(226, 226, 226);
     cursor: pointer;
@@ -462,21 +463,21 @@ textarea {
     font-weight: 600;
     font-size: 16px;
 }
-.tab button:hover {
+.topRightContainer .tab button:hover {
     background-color: #000000;
     color: #fff;
 }
-.tab button.active {
+.topRightContainer .tab button.active {
     background-color: #000000;
     color: white;
 }
-.tabcontent {
+.topRightContainer .tabcontent {
     display: none;
     border: 1px solid #dedddd;
     border-top: none;
     border-radius: 0 0 8px 8px;
 }
-.tabcontent:first-child{
+.topRightContainer .tabcontent:first-child{
     display: block;
 }
 .columns {
