--- a/public/assests/css/error.styles.css
+++ b/public/assests/css/error.styles.css
@@ -1,6 +1,5 @@
 .backg1
 {
-    font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
     background-color: #ffffff;
     display: flex;
     justify-content: center;
@@ -10,7 +9,8 @@
 }
 .error-container
 {
-    display: block;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-content: center;
     
