startup.sh added

--- a/public/assests/css/displayJob.styles.css
+++ b/public/assests/css/displayJob.styles.css
@@ -38,7 +38,7 @@ body {
     justify-content: center;
 }
 
-svg{
+.displayJobContainer svg{
     width: 16px;
     height: 16px;
     margin-right: 4px;
