--- a/public/assests/css/sellerProfile.styles.css
+++ b/public/assests/css/sellerProfile.styles.css
@@ -466,6 +466,8 @@ textarea
 
 .dltIcon{
     cursor: pointer;
+    width: 16px;
+    height: 16px;
 }
 
 .AlertButton{
@@ -549,7 +551,7 @@ a{
     padding: 22px 16px;
     font-size: 19px;
     font-weight: 600;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 .sellerProfileContainer .sub-container .sellerUser-contribution .sellerUser-content .sellerheader span:hover{
     text-decoration: underline;
@@ -565,6 +567,7 @@ a{
     border-radius: 5px;
     font-size: 14px;
     transition: ease-in-out 0.3s;
+    cursor: pointer;
 }
 .sellerProfileContainer .sub-container .sellerUser-contribution .sellerUser-content .sellerheader button:hover{
     color: #fff;
