--- a/public/assests/css/order.styles.css
+++ b/public/assests/css/order.styles.css
@@ -11,11 +11,23 @@ header{
     background-color: #fff !important;
 }
 
-
 /* Main Container */
 .orderContainer{
     margin: 16px 32px;
     padding: 16px 32px;
+}
+.orderContainer .type-1{
+    display: block;
+    margin-top: 4px;
+    font-weight: 600;
+    font-size: 16px;
+    color: #404145;
+    font-family: Macan, Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+.orderContainer .type-2 {
+    display: block;
+    font: 400 16px / 24px Macan, Helvetica Neue, Helvetica, Arial, sans-serif;
+    color: #62646a;
 }
 
 /* Tab Section */
@@ -49,17 +61,17 @@ header{
     display: flex;
     justify-content: space-between;
     gap: 16px;
+    height: 600px;
 }
-
 
 /* Left Container*/
 .userActivity{
     width: 56%;
-    height: calc(100vh - 56px);
+    height: 100%;
     background-color: #fff;
     margin-top: 16px;
     border: 1px solid #c5c6c9;
-    border-radius: 5px;
+    border-radius: 8px;
 }
 
 /* Tab 1 */
@@ -71,7 +83,6 @@ header{
 }
 
 /* Chat Section */
-
 #activity{
     display: flex;
     flex-direction: column;
@@ -201,7 +212,6 @@ P{
     color: #999;
 }
 
-
 /*chat footer*/
 #activity .chatFooter{
     height: 8%;
@@ -252,16 +262,15 @@ P{
     object-fit: cover;
 }
 
-
 /* Right Container */
 .orderContent .orderDetails{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 44%;
+    height: 100%;
     margin-top: 16px;
     gap: 16px;
-    height: auto;
 }
 
 /* Right Container Upper Part */
@@ -270,7 +279,7 @@ P{
     background-color: #fff;
     border: 1px solid #c5c6c9;
     border-radius: 5px;
-    height: auto;
+    height: 50%;
     padding: 16px;
 }
 .orderDetails .deadline{
@@ -358,6 +367,48 @@ a {
 /* Right Container Bottom Part */
 .orderContent .orderDetailsBottomContainer{
     display: flex;
-    align-items: flex-end;
-    justify-content: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 50%;
+    background-color: #fff;
+    border: 1px solid #c5c6c9;
+    border-radius: 8px;
+    padding: 16px;
+}
+.orderDetailsBottomContainer .orderDetailsBottomLeftContainer{
+    display: flex;
+    justify-content: space-between;
+    width: 60%;
+}
+.orderDetailsBottomContainer .orderDetailsBottomRightContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 40%;
+}
+.buttonType-3{
+    cursor: pointer;
+    width: 100%;
+    height: 32px;
+    /* padding: 8px; */
+    font-weight: 500;
+    font-size: 18px;
+    text-align: center;
+    color: #333;
+    border: 2px solid #333;
+    border-radius: 8px;
+    transition: ease-in-out 0.3s;
+    background-color: #fff;
+}
+
+
+@media only screen and (max-width: 900px) {
+
+}
+
+@media only screen and (max-width: 600px) {
+    .orderContent{
+        display: flex;
+        flex-direction: column;
+    }
 }
