--- a/public/assests/css/sharePoint.styles.css
+++ b/public/assests/css/sharePoint.styles.css
@@ -32,14 +32,16 @@ body{
     padding: 0px 16px;
     height: 100%;
 }
-
+.sharePointContainer .column{
+    display: flex;
+    flex-direction: column;
+}
 .title{
     font-size: medium;
-    color: #333;
+    /* color: #333; */
     font-weight: 500;
     margin-bottom: 16px;
 }
-
 .darkTitle{
     color: #222325;
     font-size: 24px;
@@ -50,13 +52,13 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: calc(100vh - 150px);
+    height: 600px;
     width: 44%;
     background-color: #fff;
     margin-top: 16px;
     padding: 16px;
     border: 1px solid #c5c6c9;
-    border-radius: 5px;
+    border-radius: 8px;
 }
 .sharePointContainer .leftUpperContainer{
     height: 100%;
@@ -82,208 +84,27 @@ body{
     align-items: center;
 }
 
-
-.sharePointContainer .leftBottomContainer{
-}
-
 /* right container */
 .sharePointContainer .rightContainer{
-    height: fit-content;
+    height: 600px;
     width: 56%;
     background-color: #fff;
     margin-top: 16px;
     padding: 16px;
     padding: 16px;
     border: 1px solid #c5c6c9;
-    border-radius: 5px;
+    border-radius: 8px;
 }
-
-
-/* Rate Section */
-.title {
-    font-size: medium;
-    color: #333;
-    font-weight: 500;
+.sharePointContainer .type-1{
+    margin-top: 8px;
+    font-weight: 600;
+    font-size: 16px;
+    color: #404145;
+    font-family: Macan, Helvetica Neue, Helvetica, Arial, sans-serif;
 }
-.rate {
-    float: right;
-    height: 46px;
-    padding: 0 10px;
-}
-.rate:not(:checked) > input {
-    position: absolute;
-    top: -9999px;
-}
-.rate:not(:checked) > label {
-    float: right;
-    width: 1em;
-    overflow: hidden;
-    white-space: nowrap;
-    cursor: pointer;
-    font-size: 30px;
-    color: #ccc;
-}
-.rate:not(:checked) > label:before {
-    content: "★ ";
-}
-.rate > input:checked ~ label {
-    color: #ffd900;
-}
-.rate:not(:checked) > label:hover,
-.rate:not(:checked) > label:hover ~ label {
-    color: #ffd900;
-}
-.rate > input:checked + label:hover,
-.rate > input:checked + label:hover ~ label,
-.rate > input:checked ~ label:hover,
-.rate > input:checked ~ label:hover ~ label,
-.rate > label:hover ~ input:checked ~ label {
-    color: #ffd900;
-}
-/* rate2 */
-.rate2 {
-    float: right;
-    height: 46px;
-    padding: 0 10px;
-}
-.rate2:not(:checked) > input {
-    position: absolute;
-    top: -9999px;
-}
-.rate2:not(:checked) > label {
-    float: right;
-    width: 1em;
-    overflow: hidden;
-    white-space: nowrap;
-    cursor: pointer;
-    font-size: 30px;
-    color: #ccc;
-}
-.rate2:not(:checked) > label:before {
-    content: "★ ";
-}
-.rate2 > input:checked ~ label {
-    color: #ffd900;
-}
-.rate2:not(:checked) > label:hover,
-.rate2:not(:checked) > label:hover ~ label {
-    color: #ffd900;
-}
-.rate2 > input:checked + label:hover,
-.rate2 > input:checked + label:hover ~ label,
-.rate2 > input:checked ~ label:hover,
-.rate2 > input:checked ~ label:hover ~ label,
-.rate2 > label:hover ~ input:checked ~ label {
-    color: #ffd900;
-}
-/* rate3 */
-.rate3 {
-    float: right;
-    height: 46px;
-    padding: 0 10px;
-}
-.rate3:not(:checked) > input {
-    position: absolute;
-    top: -9999px;
-}
-.rate3:not(:checked) > label {
-    float: right;
-    width: 1em;
-    overflow: hidden;
-    white-space: nowrap;
-    cursor: pointer;
-    font-size: 30px;
-    color: #ccc;
-}
-.rate3:not(:checked) > label:before {
-    content: "★ ";
-}
-.rate3 > input:checked ~ label {
-    color: #ffd900;
-}
-.rate3:not(:checked) > label:hover,
-.rate3:not(:checked) > label:hover ~ label {
-    color: #ffd900;
-}
-.rate3 > input:checked + label:hover,
-.rate3 > input:checked + label:hover ~ label,
-.rate3 > input:checked ~ label:hover,
-.rate3 > input:checked ~ label:hover ~ label,
-.rate3 > label:hover ~ input:checked ~ label {
-    color: #ffd900;
-}
-
-/* rate4 */
-.rate4 {
-    float: right;
-    height: 46px;
-    padding: 0 10px;
-}
-.rate4:not(:checked) > input {
-    position: absolute;
-    top: -9999px;
-}
-.rate4:not(:checked) > label {
-    float: right;
-    width: 1em;
-    overflow: hidden;
-    white-space: nowrap;
-    cursor: pointer;
-    font-size: 30px;
-    color: #ccc;
-}
-.rate4:not(:checked) > label:before {
-    content: "★ ";
-}
-.rate4 > input:checked ~ label {
-    color: #ffd900;
-}
-.rate4:not(:checked) > label:hover,
-.rate4:not(:checked) > label:hover ~ label {
-    color: #ffd900;
-}
-.rate4 > input:checked + label:hover,
-.rate4 > input:checked + label:hover ~ label,
-.rate4 > input:checked ~ label:hover,
-.rate4 > input:checked ~ label:hover ~ label,
-.rate4 > label:hover ~ input:checked ~ label {
-    color: #ffd900;
-}
-/* rate5 */
-.rate5 {
-    float: right;
-    height: 46px;
-    padding: 0 10px;
-}
-.rate5:not(:checked) > input {
-    position: absolute;
-    top: -9999px;
-}
-.rate5:not(:checked) > label {
-    float: right;
-    width: 1em;
-    overflow: hidden;
-    white-space: nowrap;
-    cursor: pointer;
-    font-size: 30px;
-    color: #ccc;
-}
-.rate5:not(:checked) > label:before {
-    content: "★ ";
-}
-.rate5 > input:checked ~ label {
-    color: #ffd900;
-}
-.rate5:not(:checked) > label:hover,
-.rate5:not(:checked) > label:hover ~ label {
-    color: #ffd900;
-}
-.rate5 > input:checked + label:hover,
-.rate5 > input:checked + label:hover ~ label,
-.rate5 > input:checked ~ label:hover,
-.rate5 > input:checked ~ label:hover ~ label,
-.rate5 > label:hover ~ input:checked ~ label {
-    color: #ffd900;
+.sharePointContainer form{
+    height: 100%;
+    width: 100%;
 }
 .loader {
     border: 10px solid #f3f3f3;
@@ -297,7 +118,6 @@ body{
 }
 
 /* subsection */
-
 .subsection {
     background-color: #ececec;
     margin-top: 10px;
@@ -332,13 +152,6 @@ body{
 .image-container img {
     width: 500px;
 }
-
-
-
-
-
-
-
 .file {
     border-radius: 10px;
     box-shadow: 1px 1px 5px 1px #c9c9c9;
@@ -360,8 +173,6 @@ body{
     grid-row: 2;
     font-size: small;
 }
-
-
 .download {
     grid-column: 3;
     grid-row: 1/3;
@@ -405,8 +216,6 @@ body{
     padding: 5px;
     padding-left: 10px;
 }
-
-
 .filebtn {
     color: transparent;
 }
@@ -460,7 +269,6 @@ body{
     border-radius: 6px;
     background-color: #f3f3f3;
 }
-
 .scrollable::-webkit-scrollbar {
     width: 7px;
     background-color: #f3f3f3;
@@ -579,4 +387,59 @@ body{
     text-align: right;
     font-size: small;
     color: white;
+}
+
+@media only screen and (max-width: 900px) {
+    .sharePointHeader {
+        min-height: 24px;
+        margin-top: 24px;
+        font-size: 32px;
+        font-weight: 700;
+        color: #222325;
+        line-height: 140%;
+        padding: 0px;
+    }
+    .sharePointContainer .container{
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 0px;
+        margin-right: 0px;
+        margin-left: 0px;
+        padding: 0px;
+        height: 100%;
+    }
+    .sharePointContainer .leftContainer{
+        width: 100%;
+    }
+    .sharePointContainer .rightContainer{
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .sharePointHeader {
+        min-height: 24px;
+        margin-top: 24px;
+        font-size: 32px;
+        font-weight: 700;
+        color: #222325;
+        line-height: 140%;
+        padding: 0px;
+    }
+    .sharePointContainer .container{
+        display: flex;
+        flex-direction: column;
+        gap: 0px;
+        margin-right: 0px;
+        margin-left: 0px;
+        padding: 0px;
+        height: 100%;
+    }
+    .sharePointContainer .leftContainer{
+        width: 100%;
+    }
+    .sharePointContainer .rightContainer{
+        width: 100%;
+        height: auto;
+    }
 }
