complaint and help request creation done

--- a/public/assests/css/buyerProfile.styles.css
+++ b/public/assests/css/buyerProfile.styles.css
@@ -222,7 +222,7 @@ body{
 }
 
 /* change full name */
-input[type = "text"], textarea, select{
+input[type = "text"],.buyerProfileContainer textarea, select{
     height: 40px;
     font-size: 16px;
     border-radius: 4px;
