--- a/public/assests/css/editSellerProfile.styles.css
+++ b/public/assests/css/editSellerProfile.styles.css
@@ -295,7 +295,7 @@ body{
 }
 
 /* */
-textarea{
+.editSellerProfile_MainContainer textarea{
     font-size: 16px;
     width: 100%;
     margin-bottom: 32px;
