--- a/public/assests/css/sharePoint.styles.css
+++ b/public/assests/css/sharePoint.styles.css
@@ -32,11 +32,21 @@ body{
     padding: 0px 16px;
     height: 632px;
 }
+.sharePointContainer textarea{
+    font: 16px Macan, Helvetica Neue, Helvetica, Arial, sans-serif;
+    border-radius: 8px !important;
+    font-size: 16px;
+    padding: 8px;
+    height: 25%;
+    cursor: auto;
+}
+
 .sharePointContainer .column{
     display: flex;
     flex-direction: column;
 }
 .title{
+    height: 10%;
     font-size: medium;
     /* color: #333; */
     font-weight: 500;
@@ -65,11 +75,10 @@ body{
     display: flex;
     flex-direction: column;
 }
-.sharePointContainer .leftUpperContainer .title{
-    height: 5%;
-}
+
 .sharePointContainer .leftUpperContainer .deliveryFiles{
-    border: 1px solid black;
+    border: 1px solid #c5c6c9;
+    border-radius: 8px;
     height: 95%;
     display: flex;
     flex-direction: column;
@@ -86,7 +95,7 @@ body{
 
 /* right container */
 .sharePointContainer .rightContainer{
-    height: 100%;
+    height: fit-content;
     width: 56%;
     background-color: #fff;
     margin-top: 16px;
