--- a/public/assests/css/sentProposals.styles.css
+++ b/public/assests/css/sentProposals.styles.css
@@ -48,6 +48,7 @@ body{
 
 /* Style the tab */
 .sentJobPropContainer .tab {
+    height:50px;
     width: 100%;
     overflow: hidden;
     border: none !important;
@@ -60,8 +61,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100px;
-    /* height: 32px; */
+    width: 33.3%;
+    height: 50px;
     font-size: 16px;
     background-color: inherit;
     float: left;
@@ -78,18 +79,18 @@ body{
     color: #ffffff;
 }
 
-#pending:hover{
+/* #pending:hover{
     background-color: #ddeb18;
     color: #222325;
-}
-
+} */
+/* 
 #defaultOpen:hover{
     background-color: #22cf27;
 }
 
 #cancelled:hover{
     background-color: #e41f11;
-}
+} */
 
 /* Create an active/current tablink class */
 .sentJobPropContainer .tab button.active {
@@ -179,7 +180,7 @@ Tbody td{
 } */
 
 .tablinks{
-
+    height:100%;
 }
 
 @media only screen and (max-width: 900px) {
