--- a/public/assests/css/jobProposals.styles.css
+++ b/public/assests/css/jobProposals.styles.css
@@ -92,7 +92,7 @@
     border: none;
     border-radius: 5px;
     height: 50px;
-    width: 60px;
+    /* width: 60px; */
     margin: 8px;
     cursor: pointer;
 }
