--- a/public/assests/css/sharePoint.styles.css
+++ b/public/assests/css/sharePoint.styles.css
@@ -84,6 +84,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow-y: scroll;
 }
 .sharePointContainer .deliveryFiles .animation{
     height: 100%;
@@ -161,69 +162,48 @@ body{
 .image-container img {
     width: 500px;
 }
+
+/* file card */
 .file {
-    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    gap: 16px;
+    padding: 8px;
+    border: 1px solid #333;
+    border-radius: 8px;
     box-shadow: 1px 1px 5px 1px #c9c9c9;
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    gap: 10px;
-    grid-auto-rows: repeat(3, 1fr);
     background-color: rgb(255, 255, 255);
 }
-.name {
-    font-weight: 500;
-    margin-top: 10px;
-    grid-column: 2;
-    grid-row: 1;
-    text-align: left;
+.file .fileIcon{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 10%;
 }
-.size {
-    grid-column: 2/3;
-    grid-row: 2;
-    font-size: small;
+.file .fileDetails{
+    width: 80%;
 }
-.download {
-    grid-column: 3;
-    grid-row: 1/3;
-    padding-top: 10px;
-    margin-right: 10px;
-    float: right;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+.file .downloadDeleteIcon{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 10%;
 }
 .downloadimg {
     float: right;
     width: 50px;
     height: 50px;
 }
-.time {
-    margin-right: 10px;
-    margin-bottom: 5px;
-    grid-column: 1/4;
-    grid-row: 3;
-    text-align: right;
-    font-size: small;
-    color: #333;
-}
 .fileimg {
-    grid-column: 1;
-    grid-row: 1/4;
     width: 50px;
     height: 50px;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    margin-left: 15px;
 }
 
-/* GRID START */
-
-
-/* GRID END */
+/* file container */
 .filecontainer {
-    padding: 5px;
-    padding-left: 10px;
+    width: 100%;
+    padding: 8px;
 }
 .filebtn {
     color: transparent;
