--- a/public/assests/css/sharePoint.styles.css
+++ b/public/assests/css/sharePoint.styles.css
@@ -39,13 +39,14 @@ body{
     padding: 8px;
     height: 25%;
     cursor: auto;
+    border: 1px solid #333;
 }
 
 .sharePointContainer .column{
     display: flex;
     flex-direction: column;
 }
-.title{
+.sharePointContainer .title{
     height: 10%;
     font-size: medium;
     /* color: #333; */
@@ -188,7 +189,6 @@ body{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    width: 10%;
 }
 .downloadimg {
     float: right;
@@ -205,76 +205,6 @@ body{
     width: 100%;
     padding: 8px;
 }
-.filebtn {
-    color: transparent;
-}
-.filebtn::-webkit-file-upload-button {
-    visibility: hidden;
-}
-.filebtn::before {
-    content: "Select files";
-    color: black;
-    display: inline-block;
-    background-color: #007bff;
-    border-radius: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: white;
-    outline: none;
-    white-space: nowrap;
-    -webkit-user-select: none;
-    cursor: pointer;
-}
-.filebtn::before:hover {
-    background-color: #ffffff;
-    color: #007bff;
-    box-shadow: 1px 1px 5px 0px #c9c9c9;
-}
-.upload_background {
-    display: flex;
-    justify-content: space-between;
-    background-color: #dadada;
-    padding: 16px;
-    border-radius: 8px;
-}
-.scrollable {
-    overflow-y: auto;
-    height: 65vh;
-    margin-bottom: 20px;
-}
-.scrollable-empty {
-    overflow-y: auto;
-    height: 65vh;
-    margin-bottom: 20px;
-    background-image: url(../img/sharepointbg.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.scrollable::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(63, 63, 63, 0.3);
-    border-radius: 6px;
-    background-color: #f3f3f3;
-}
-.scrollable::-webkit-scrollbar {
-    width: 7px;
-    background-color: #f3f3f3;
-}
-.scrollable::-webkit-scrollbar-thumb {
-    border-radius: 6px;
-    -webkit-box-shadow: inset 0 0 6px rgba(82, 82, 82, 0.3);
-    background-color: #555;
-}
-.textbox {
-    width: 100%;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    border: none;
-    border-radius: 7px;
-    background-color: #ececec;
-}
-
 
 
 /* Safari */
