--- a/public/assests/css/sellerProfile.styles.css
+++ b/public/assests/css/sellerProfile.styles.css
@@ -617,6 +617,43 @@ a{
     width: 100px;
 }
 
+.addToPortfolioImgs
+input[type = "file"]
+{
+    display: none;
+    
+}
+
+label{
+    display: inline-block;
+    text-transform: uppercase;
+    color:#fff;
+    background: #1dbf73;
+    text-align: center;
+    padding: 15px 40px;
+    font-size: 18px;
+    font-size:16px; 
+    letter-spacing: 1.5px;
+    user-select: none;
+    cursor: pointer;
+    box-shadow: 5px 15px 25px rgb(3, 5,0,1);
+    display: flex;
+}
+
+label i{
+
+}
+
+label:active{
+    transform: scale(0.9s);
+}
+
+.addToPortfolioImgsSubmit
+input[type = "submit"]
+{
+    display: none;
+}
+
 @media only screen and (max-width: 600px) {
     .sellerProfileContainer{
         height: 100%;
