--- a/public/assests/css/sellerProfile.styles.css
+++ b/public/assests/css/sellerProfile.styles.css
@@ -494,18 +494,18 @@ input[type = "text"],
 
 .AlertButton{
     text-align: center;
-    padding: 20px;
+    /* padding: 20px; */
     background-color: #1dbf73;
     color: white;
     margin-left: 48px;
     margin-right: 48px;
-    box-shadow: 10px 10px 5px rgb(127, 117, 112);
+    /* box-shadow: 10px 10px 5px rgb(127, 117, 112); */
     border-radius: 16px;
     /* height: 36px; */
 }
   
 .closeAlertBtn {
-margin-left: 15px;
+/* margin-left: 15px; */
 color: white;
 font-weight: bold;
 float: right;
