--- a/public/assests/css/home.styles.css
+++ b/public/assests/css/home.styles.css
@@ -71,6 +71,7 @@ body{
     color: #fff;
     font-weight: 700;
     cursor: pointer;
+    margin-right: 16px;
     background-color:transparent;
 }
 .upperHeader button.scrolled{
