--- a/public/assests/css/viewComplaints.styles.css
+++ b/public/assests/css/viewComplaints.styles.css
@@ -464,7 +464,7 @@ nav.close ~ .dashboard .top{
     border-collapse: collapse;
     margin: 0 auto;
     font-size: 0.9em;
-    min-width: 400px;
+    min-width: 200px;
     border-radius: 5px 5px 0 0;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
@@ -529,6 +529,7 @@ nav.close ~ .dashboard .top{
     vertical-align: top; /* Align the divs to the top */
     box-sizing: border-box; /* Include padding and border in the width */
     padding: 10px; /* Optional: Add padding inside the divs */
+    border: 2px solid #dcdcdc;/
  }
 
 
