--- a/public/assests/css/sellerProfile.styles.css
+++ b/public/assests/css/sellerProfile.styles.css
@@ -10,6 +10,8 @@ body{
     height: 100%;
     width: 100%;
     padding: 16px 32px;
+    /* padding-bottom: 32px; */
+    margin-bottom: 32px;
 }
 
 /*
