--- a/public/assests/css/gigCard.styles.css
+++ b/public/assests/css/gigCard.styles.css
@@ -41,19 +41,29 @@
 }
 
 .gigCard 
-.coverImg img{
+.coverImg 
+img{
     width: 100%;
     height: 160px;
     border-radius: 8px 8px 0 0;
     margin-bottom: 4px;
 }
+
+/* .buyerDashboardContent
+.gigCard
+.coverImg
+img{
+
+} */
+
 .gigCard
 .coverImg
 {
     display: flex; 
-         align-items: end;
+    align-items: end;
     /* justify-content: center */
 }
+
 .gigCard .rating{
     display: flex;
 }
