--- a/public/assests/css/adminDashboard.styles.css
+++ b/public/assests/css/adminDashboard.styles.css
@@ -762,3 +762,21 @@ box-shadow: var(--shadow); */
     border: #000;
     border-radius: 10px;
 }
+
+.heading-one{
+    color: white;
+    font-size: 24px;
+    text-transform: capitalize;
+    font-weight: 500;
+    letter-spacing: 0.7px;
+    margin-left: 20px;
+}
+
+.title{
+    background-color: #1dbf73;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 5px;
+
+}
+
