--- a/public/assests/css/adminDashboard.styles.css
+++ b/public/assests/css/adminDashboard.styles.css
@@ -763,6 +763,11 @@ box-shadow: var(--shadow); */
     border-radius: 10px;
 }
 
+.main-section{
+    display: flex;
+    width: 100%;
+}
+
 .heading-one{
     color: white;
     font-size: 24px;
@@ -777,6 +782,80 @@ box-shadow: var(--shadow); */
     padding-top: 5px;
     padding-bottom: 5px;
     border-radius: 5px;
-
 }
 
+.form{
+    width: 50%;
+    background-color: white;
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(232,232,232,1);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(232,232,232,1);
+    box-shadow: 0px 0px 7px 0px rgba(232,232,232,1);
+    padding: 25px 35px 25px 35px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    margin-right: 30px;
+}
+
+.label{
+    margin-bottom: 10px;
+    word-spacing: 1.5px;
+    letter-spacing: 0.7px;
+}
+
+#firstName, #lastName, #userName, #user_email, #user_password{
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    border:1px solid #dadada;
+    box-shadow: 0 0 3px white;
+    font-size: 15px;
+}
+
+#firstName:focus,
+#lastName:focus,
+#userName:focus,
+#user_email:focus,
+#user_password:focus {
+    border: 1px solid #aef9d6; 
+    background-color: #f3fdf8; 
+    outline: none; 
+    box-shadow: 0 0 3px #98f6ca; 
+    font-size: 15px;
+}
+
+.ibutton{
+    display: inline-block; 
+    width: 100%;           
+    margin: 0 auto;        
+    text-align: center;
+}
+
+#enter{
+    height: 40%;
+    width: 25%;
+    font-size: 15px;
+    text-transform: capitalize;
+    padding: 7px;
+    background-color: white;
+    font-weight: 500;
+    color: #1dbf73;
+    border: 2px solid #1dbf73;
+    border-radius: 5px;
+    letter-spacing: 0.7px;
+}
+
+#enter:hover{
+    background-color: #1dbf73;
+    color: white;
+    border: 2px solid #1dbf73;
+    cursor: pointer;
+}
+
+.right-section{
+    width: 50%;
+}
+
+.content-table{
+    width: 100%;
+}
