--- a/public/assests/css/displayJob.styles.css
+++ b/public/assests/css/displayJob.styles.css
@@ -31,6 +31,10 @@ body {
     height: calc(100vh - 180px);
 }
 
+.displayJobContainer .displayJobContent{
+    height: calc(110vh - 180px);
+}
+
 .displayJobMajorDetails{
     width: 75%;
     padding: 8px 0px 8px 8px;
