--- a/public/assests/css/sellerDashboard.styles.css
+++ b/public/assests/css/sellerDashboard.styles.css
@@ -6,7 +6,7 @@ body{
 
 /*sellerDashboard-content*/
 .sellerDashboard-content{
-    padding: 16px 0px 0px 0px;
+    padding: 16px 32px;
 }
 
 /*header*/
@@ -21,6 +21,14 @@ body{
     padding: 0 32px;
 }
 
+.sellerDashboard-content .dashboard-container{
+    display: flex;
+    gap: 64px;
+    margin-right: 32px;
+    margin-left: 32px;
+    padding: 0px 16px;
+}
+
 /*dashboard-content*/
 .dashboard-container{
     display: flex;
@@ -30,8 +38,9 @@ body{
 
 /*job-feed*/
 .dashboard-container .job-feed{
-    width: 75%;
-    padding: 0px 32px;
+    width: 70%;
+    margin-bottom: 32px;
+    /* padding: 0px 32px; */
 }
 .searchBar{
     width: 100%;
@@ -67,6 +76,62 @@ body{
     color: #333;
     background: #fff;
 }
+
+.sellerDashboard-content .dashboard-container .job-feed{
+    padding-left: 0px;
+}
+
+.dashboard-container .job-feed .jobs
+{
+    border: none;
+}
+
+.dashboard-container .job-feed .jobs .job-header{
+    margin-bottom: 16px;
+    border: 1px solid #dadbdd;
+    border-radius: 0;
+}
+
+.dashboard-container .job-feed .searchBar input[type=text]{
+    height: 40px;
+    border-right: 0;
+   
+}
+
+.dashboard-container .job-feed .jobContent .job-card{
+    min-height: 150px;
+    height: auto;
+    border-radius: 5px!important;
+    border: 2px solid #dadbdd;  
+}
+
+.dashboard-container .job-feed .jobs .jobContent
+{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px!important;
+}
+
+.dashboard-container .job-feed .jobs .jobContent .job-card .job-data-basic{
+    width: 100%!important;
+    display: flex;
+    justify-content:space-between;
+    align-items:normal;
+}
+
+.dashboard-container .job-feed .jobs .jobContent .job-card{
+    transition: box-shadow 0.3s ease;
+    width: 100%!important;
+}
+.dashboard-container .job-feed .jobs .jobContent .job-card:hover{
+    cursor: pointer;
+    box-shadow: 10px 10px 20px rgb(36, 36, 36, 0.6);
+}
+
+.dashboard-container{
+
+} 
+
 .jobs{
     width: 100%;
     height: auto;
@@ -104,18 +169,55 @@ body{
 .SellerDashFilterContainer
 {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+}
+
+.sellerDashboard-content .dashboard-container .job-feed .jobs .job-header .SellerDashFilterContainer form{
+    display: flex!important;
+    justify-content: space-between;
+    align-items:flex-end;
+    gap: 4px;
+    width: 40%;
+}
+.sellerDashboard-content .dashboard-container .job-feed .jobs .job-header .SellerDashFilterContainer form .SellerDashFilterSelect select{
+    font: 400 16px / 24px Macan,Helvetica Neue,Arial,sans-serif;
+    border-radius: 4px;
+    height: 30px;
+    border: 1px solid #c5c6c9;  
+}
+
+/* .sellerDashboard-content .dashboard-container .job-feed .jobs .job-header .SellerDashFilterContainer form .SellerDashFilterSelect select::selection{
+    border: 1px solid #c5c6c9;
+} */
+
+.sellerDashboard-content .dashboard-container .job-feed .jobs .job-header .SellerDashFilterContainer form .TYPE-1 button{
+    height: 30px;   
+    width:100%;
+    border-radius: 4px;
+    font-size: 16px;
+    transition: ease-in-out 0.3s;
+    border: 1px solid #c5c6c9;
+    font-family: Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
+}
+
+.sellerDashboard-content .dashboard-container .job-feed .jobs .job-header .SellerDashFilterContainer form .TYPE-1 button:hover{
+    color: #fff;
+    background: #31d65a;
+}
+
+.sellerDashboard-content .dashboard-container .job-feed .jobs .job-header .job-header-content{
+    width: 60%;
 }
 
 .sellerDashboard-content
 .TYPE-1{
-    margin-top: 8px;
+    /* margin-top: 8px;
     margin-bottom: 8px;
     font-weight: 600;
     font-size: 16px;
     color: #404145;
-    font-family: Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-family: Macan,Helvetica Neue,Helvetica,Arial,sans-serif; */
 }
 
 .jobs .content{
@@ -124,30 +226,28 @@ body{
 
 /*seller-details*/
 .dashboard-container .seller-details{
-    width: 25%;
-    padding: 0px 16px;
+    width: 30%;
+    /* padding: 0px 16px; */
+    margin-bottom: 32px;
 }
 .dashboard-container .profile{
     position: relative;
     background-color: #fff;
     border: 1px solid #dadbdd;
-    padding: 32px 32px 16px 32px;
+    padding: 32px;
     font-size: 14px;
     line-height: 130%;
-    margin-bottom: 16px;
+    margin-bottom: 32px;
     box-sizing: border-box;
 }
 
-.dashboard-container
-{
 
-}
 
 /*Active Status*/
 .dashboard-container .profile .online{
     color: #31d65a;
     border-bottom: 4px solid #31d65a;
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 
 .dashboard-container .profile .onlineindc{
@@ -167,8 +267,8 @@ body{
     margin-top: 8px;
 }
 .dashboard-container .profile .profile-picture img{
-    width: 140px;
-    height: 140px;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
     border-radius: 100%;
 }
@@ -190,7 +290,7 @@ body{
 .preview-profile button{
     width: 100%;
     height: 32px;
-    margin-bottom: 8px;
+    margin-bottom: 16px;
     color: #333;
     border: 2px solid #333;
     background: none;
@@ -222,6 +322,7 @@ body{
     box-shadow: 5px 10px 18px #333;
 }
 .dashboard-container .profile .user-info{
+    padding-top: 16px;
     padding-top: 16px;
     border-top: 2px solid #dadbdd;
     border-bottom: 2px solid #dadbdd;
